--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-virtual": "^3.13.8",
     "clsx": "^2.1.1",
     "react": "^19.1.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6"
